--- a/blog/blogs/templates/nav-bar.html
+++ b/blog/blogs/templates/nav-bar.html
@@ -20,6 +20,30 @@
             <div style="width: 50%;" class="elementor-column elementor-col-50 elementor-top-column elementor-element elementor-element-1cd0600 sc_layouts_column_align_right sc_layouts_column sc_inner_width_none sc_content_align_inherit sc_layouts_column_icons_position_left" data-id="1cd0600" data-element_type="column">
                 <div class="elementor-column-wrap elementor-element-populated">
                         <div class="elementor-widget-wrap">
+							<nav class="sc_layouts_menu sc_layouts_menu_default sc_layouts_menu_dir_horizontal menu_hover_slide_line hide_on_mobile" id="trx_sc_layouts_menu_2002581489" data-animation-in="none" data-animation-out="none"		>
+								<ul id="menu_main_def" class="sc_layouts_menu_nav menu_main_def_nav">
+								<li id="menu-item-2516" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-has-children-layout menu-item-2516">
+									<a href="{% url 'list' %}"><span>Home</span>
+									</a>
+								</li>
+								<li id="menu-item-2516" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-has-children-layout menu-item-2516">
+									<a href="{% url 'about_us' %}"><span>About-us</span>
+									</a>
+								</li>
+								<li id="menu-item-2516" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-has-children-layout menu-item-2516">
+									<a href="{% url 'blogs' %}"><span>Blogs</span>
+									</a>
+								</li>
+								<li id="menu-item-2516" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-has-children-layout menu-item-2516">
+									<a href="{% url 'vod' %}"><span>VOD</span>
+									</a>
+								</li>
+								<li id="menu-item-2516" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-has-children-layout menu-item-2516">
+									<a href="{% url 'contact_us' %}"><span>Contact-us</span>
+									</a>
+								</li>
+								</ul>
+								</nav>	
                     <div class="sc_layouts_item elementor-element elementor-element-7eb98fc sc_layouts_hide_on_wide sc_layouts_hide_on_desktop sc_layouts_hide_on_notebook sc_layouts_hide_on_tablet sc_fly_static elementor-widget elementor-widget-trx_sc_layouts_menu" data-id="7eb98fc" data-element_type="widget" data-widget_type="trx_sc_layouts_menu.default">
                 <div class="elementor-widget-container">
                 <div id="trx_sc_layouts_menu_978376069" class="sc_layouts_iconed_text sc_layouts_menu_mobile_button_burger sc_layouts_menu_mobile_button without_menu">
